--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,3 +3,10 @@
     justify-content: center;
     align-items: center;    
 }
+
+body {
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
