--- a/src/pages/Editor/newPost.css
+++ b/src/pages/Editor/newPost.css
@@ -11,7 +11,7 @@
     
   }
 
-  img {
+  .imgPost {
     width: 100%;
     height: 300px;
     object-fit: cover;
@@ -29,6 +29,11 @@ input  {
   }
 
 
+  .boton {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
 
   .publish {
 
@@ -36,7 +41,22 @@ input  {
     /* top: 20px;
     right: 50px; */
     color: white;
-    background-color: teal;
+    background-color: green;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+
+  .cancel {
+
+    float: right;
+    gap: 20px;
+    color: white;
+    background-color: blue;
     padding: 10px;
     border: none;
     border-radius: 10px;
