--- a/src/styles/LoginStyles.css
+++ b/src/styles/LoginStyles.css
@@ -82,7 +82,7 @@ body {
     left: 10px;
     color: #1a73e8;
     font-size: 0.75rem;
-    background-color: white;
+    background-color: #f5f5f5;;
     height: 10px;
     padding-left: 5px;
     padding-right: 5px;
@@ -124,7 +124,7 @@ body {
       color: #1a73e8;
       font-size: 0.75rem;
       font-weight: 600;
-      background-color: white;
+      background-color: #f5f5f5;;
       height: 10px;
       padding-left: 5px;
       padding-right: 5px;
