--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,3 +10,23 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* BLOG */
+.postContainer {
+    padding-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: space-around;
+    margin: auto;
+}
+
+.NoPostContainer {
+    padding-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+/* BLOG - POST */
