--- a/src/components/TopBar/topBar.css
+++ b/src/components/TopBar/topBar.css
@@ -10,6 +10,13 @@
     font-family: "Josefin Sans", sans-serif;
   }
   
+  .username {
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 25px;
+  }
   .topLeft,
   .topRight {
     flex: 3;
